// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> when receives a simple table renders a <table> tag without <thead>, <tfoot> or <caption> 1`] = `
<table>
  <tbody>
    <tr>
      <td>
        Kine
      </td>
      <td>
        1 pcs
      </td>
      <td>
        100$
      </td>
    </tr>
    <tr>
      <td>
        Pigs
      </td>
      <td>
        3 pcs
      </td>
      <td>
        200$
      </td>
    </tr>
    <tr>
      <td>
        Chickens
      </td>
      <td>
        12 pcs
      </td>
      <td>
        150$
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table /> when receives a table 2.20 format withHeadings = false renders a <table> tag without <thead>, <tfoot> or <caption> 1`] = `
<table>
  <tbody>
    <tr>
      <td>
        Kine
      </td>
      <td>
        Pigs
      </td>
      <td>
        Chicken
      </td>
    </tr>
    <tr>
      <td>
        1 pcs
      </td>
      <td>
        3 pcs
      </td>
      <td>
        12 pcs
      </td>
    </tr>
    <tr>
      <td>
        100$
      </td>
      <td>
        200$
      </td>
      <td>
        150$
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table /> when receives a table 2.20 format withHeadings = true renders a <table> tag without <tfoot> or <caption> 1`] = `
<table>
  <thead>
    <tr>
      <th
        scope="col"
      >
        Kine
      </th>
      <th
        scope="col"
      >
        Pigs
      </th>
      <th
        scope="col"
      >
        Chicken
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        1 pcs
      </td>
      <td>
        3 pcs
      </td>
      <td>
        12 pcs
      </td>
    </tr>
    <tr>
      <td>
        100$
      </td>
      <td>
        200$
      </td>
      <td>
        150$
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table /> when receives a table block renders a <table> tag 1`] = `
<table>
  <caption>
    The stock on our store.
  </caption>
  <thead>
    <tr>
      <th
        scope="col"
      >
        Name
      </th>
      <th
        scope="col"
      >
        Qtd
      </th>
      <th
        scope="col"
      >
        Price
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th
        scope="row"
      >
        Kine
      </th>
      <td>
        1 pcs
      </td>
      <td>
        100$
      </td>
    </tr>
    <tr>
      <th
        scope="row"
      >
        Pigs
      </th>
      <td>
        3 pcs
      </td>
      <td>
        200$
      </td>
    </tr>
    <tr>
      <th
        scope="row"
      >
        Chickens
      </th>
      <td>
        12 pcs
      </td>
      <td>
        150$
      </td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <th
        scope="row"
      >
        Total
      </th>
      <td>
        16 pcs
      </td>
      <td>
        $450
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`<Table /> when receives a table block without footer renders a <table> tag without <tfoot> 1`] = `
<table>
  <caption>
    The stock on our store.
  </caption>
  <thead>
    <tr>
      <th
        scope="col"
      >
        Name
      </th>
      <th
        scope="col"
      >
        Qtd
      </th>
      <th
        scope="col"
      >
        Price
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th
        scope="row"
      >
        Kine
      </th>
      <td>
        1 pcs
      </td>
      <td>
        100$
      </td>
    </tr>
    <tr>
      <th
        scope="row"
      >
        Pigs
      </th>
      <td>
        3 pcs
      </td>
      <td>
        200$
      </td>
    </tr>
    <tr>
      <th
        scope="row"
      >
        Chickens
      </th>
      <td>
        12 pcs
      </td>
      <td>
        150$
      </td>
    </tr>
  </tbody>
</table>
`;
